--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy Astro Project
 on:
   push:
     branches:
-      - main # Despliega cuando hay un push en la rama main
+      - master # Despliega cuando hay un push en la rama main
 
 jobs:
   build-and-deploy:
